--- a/src/client/pages/Service.css
+++ b/src/client/pages/Service.css
@@ -2,7 +2,7 @@
 
 /* Estilos generales */
 .services-page {
-  min-height: 100vh; /* Cambiado de height para permitir scroll si es necesario */
+  min-height: calc(100vh - 68px);
   padding: 2rem;
   background-color: var(--bg-dark);
   color: white;
@@ -36,6 +36,7 @@
   padding: 1.5rem;
   text-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
 }
 
 .service-card:hover {
